; ModuleID = '/home/carl/AnghaBench/linux/fs/extr_eventpoll.c_ep_eventpoll_release.c'
source_filename = "/home/carl/AnghaBench/linux/fs/extr_eventpoll.c_ep_eventpoll_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.eventpoll* }
%struct.eventpoll = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @ep_eventpoll_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ep_eventpoll_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.eventpoll*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %6 = load %struct.file*, %struct.file** %4, align 8
  %7 = getelementptr inbounds %struct.file, %struct.file* %6, i32 0, i32 0
  %8 = load %struct.eventpoll*, %struct.eventpoll** %7, align 8
  store %struct.eventpoll* %8, %struct.eventpoll** %5, align 8
  %9 = load %struct.eventpoll*, %struct.eventpoll** %5, align 8
  %10 = icmp ne %struct.eventpoll* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load %struct.eventpoll*, %struct.eventpoll** %5, align 8
  %13 = call i32 @ep_free(%struct.eventpoll* %12)
  br label %14

14:                                               ; preds = %11, %2
  ret i32 0
}

declare dso_local i32 @ep_free(%struct.eventpoll*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
